-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.5.2, 4.8.x, 5.0.2
-
None
-
86115848b55faa747adf8bb39a213b3cec7673c4
t4id: 261526
QTextCodec::codecForHtml() assumes that the content attribute appears after the http-equiv attribute, and therefore fails to detect the charset specified for the HTML if this is not the case.
Example HTML that codecForHtml() fails on:
<html><head><meta content=\"text/html; charset=ISO-8859-15\" http-equiv=\"content-type\" /></head></html>
Autotest added: 90f0facddb799640ef9e123a3fc222e6a758c7be